### Define Targets ###
set(TARGET_TIZEN_CONTROL_DISPLAY_CLI tizen-control-display-cli)
set(TARGET_TIZEN_DEVICE_INFO_CLI tizen-device-info-cli)
set(TARGET_TIZEN_HARDWARE_CONTROL_CLI tizen-hardware-control-cli)
set(TARGET_TIZEN_SOUND_CLI tizen-sound-cli)
set(TARGET_TIZEN_NETWORK_INFO_CLI tizen-network-info-cli)
set(TARGET_TIZEN_APP_MANAGER_CLI tizen-app-manager-cli)
set(TARGET_TIZEN_NOTIFICATION_CLI tizen-notification-cli)
set(TARGET_TIZEN_SENSOR_CLI tizen-sensor-cli)
set(TARGET_TIZEN_WEB_SEARCH_CLI tizen-web-search-cli)
set(TARGET_TIZEN_FILE_MANAGER_CLI tizen-file-manager-cli)
set(TARGET_TIZEN_VCONF_CLI tizen-vconf-cli)
set(TARGET_TIZEN_MEDIA_CLI tizen-media-cli)

### Dependencies ###
find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB_DEPS REQUIRED glib-2.0)
pkg_check_modules(DLOG_DEPS REQUIRED dlog)
pkg_check_modules(VCONF_DEPS REQUIRED vconf)
ADD_SUBDIRECTORY(tizen-file-manager-cli)
ADD_SUBDIRECTORY(tizen-vconf-cli)
