### Define Targets ###
set(TARGET_TIZEN_CONTROL_DISPLAY_CLI tizen-control-display-cli)
set(TARGET_TIZEN_DEVICE_INFO_CLI tizen-device-info-cli)
set(TARGET_TIZEN_HARDWARE_CONTROL_CLI tizen-hardware-control-cli)
set(TARGET_TIZEN_SOUND_CLI tizen-sound-cli)
set(TARGET_TIZEN_NETWORK_INFO_CLI tizen-network-info-cli)
set(TARGET_TIZEN_APP_MANAGER_CLI tizen-app-manager-cli)
set(TARGET_TIZEN_NOTIFICATION_CLI tizen-notification-cli)
set(TARGET_TIZEN_SENSOR_CLI tizen-sensor-cli)
set(TARGET_TIZEN_WEB_SEARCH_CLI tizen-web-search-cli)
set(TARGET_TIZEN_FILE_MANAGER_CLI tizen-file-manager-cli)
set(TARGET_TIZEN_VCONF_CLI tizen-vconf-cli)


### Dependencies ###
find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB_DEPS REQUIRED glib-2.0)
pkg_check_modules(DLOG_DEPS REQUIRED dlog)
pkg_check_modules(VCONF_DEPS REQUIRED vconf)
pkg_check_modules(CAPI_NETWORK_CONNECTION_DEPS REQUIRED capi-network-connection)
pkg_check_modules(CAPI_NETWORK_WIFI_DEPS REQUIRED capi-network-wifi capi-network-wifi-manager)
pkg_check_modules(CAPI_NETWORK_BT_DEPS REQUIRED capi-network-bluetooth)
pkg_check_modules(CAPI_SYSTEM_INFO_DEPS REQUIRED capi-system-info)
pkg_check_modules(CAPI_APPFW_ALARM_DEPS REQUIRED capi-appfw-alarm)
pkg_check_modules(CAPI_APPFW_APP_CONTROL_DEPS REQUIRED capi-appfw-app-control)
pkg_check_modules(NOTIFICATION_DEPS REQUIRED notification)

pkg_check_modules(CAPI_APPFW_APP_MANAGER_DEPS REQUIRED capi-appfw-app-manager)
pkg_check_modules(CAPI_APPFW_PACKAGE_MANAGER_DEPS REQUIRED capi-appfw-package-manager)
pkg_check_modules(RUA_DEPS REQUIRED rua)
pkg_check_modules(CAPI_SYSTEM_DEVICE_DEPS REQUIRED capi-system-device)
pkg_check_modules(CAPI_SYSTEM_RUNTIME_INFO_DEPS REQUIRED capi-system-runtime-info)
pkg_check_modules(CAPI_SYSTEM_SETTINGS_DEPS REQUIRED capi-system-system-settings)
pkg_check_modules(STORAGE_DEPS REQUIRED storage)
pkg_check_modules(FEEDBACK_DEPS REQUIRED feedback)

pkg_check_modules(CAPI_CONTENT_MIME_TYPE_DEPS REQUIRED capi-content-mime-type)
pkg_check_modules(CAPI_SYSTEM_SENSOR_DEPS REQUIRED capi-system-sensor)
pkg_check_modules(CAPI_MEDIA_SOUND_MANAGER_DEPS REQUIRED capi-media-sound-manager)
pkg_check_modules(CAPI_MEDIA_TONE_PLAYER_DEPS REQUIRED capi-media-tone-player)
pkg_check_modules(LIBCURL_DEPS REQUIRED libcurl)

ADD_SUBDIRECTORY(tizen-network-info-cli)
ADD_SUBDIRECTORY(tizen-notification-cli)
ADD_SUBDIRECTORY(tizen-file-manager-cli)
ADD_SUBDIRECTORY(tizen-vconf-cli)
ADD_SUBDIRECTORY(tizen-app-manager-cli)
ADD_SUBDIRECTORY(tizen-device-info-cli)
ADD_SUBDIRECTORY(tizen-hardware-control-cli)

ADD_SUBDIRECTORY(tizen-sensor-cli)
ADD_SUBDIRECTORY(tizen-sound-cli)
ADD_SUBDIRECTORY(tizen-web-search-cli)
