[package]
name = "tclaw-tools"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
tclaw-api = { path = "../tclaw-api" }
tclaw-plugins = { path = "../tclaw-plugins" }
tclaw-runtime = { path = "../tclaw-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
