AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}
  SRCS)

ADD_EXECUTABLE(${TARGET_ROBOTIC_VACUUM_CLI}
  ${SRCS})

SET_TARGET_PROPERTIES(
  ${TARGET_ROBOTIC_VACUUM_CLI}
  PROPERTIES COMPILE_FLAGS "-fPIE")
SET_TARGET_PROPERTIES(
  ${TARGET_ROBOTIC_VACUUM_CLI}
  PROPERTIES LINK_FLAGS "-pie")

APPLY_PKG_CONFIG(
  ${TARGET_ROBOTIC_VACUUM_CLI} PUBLIC
  LIBCURL_DEPS
  DLOG_DEPS
)

SET(INSTALL_DIR
  "${APP_DATA_DIR}/tools/cli/${TARGET_ROBOTIC_VACUUM_CLI}")

INSTALL(TARGETS ${TARGET_ROBOTIC_VACUUM_CLI}
  DESTINATION ${INSTALL_DIR})
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tool.md"
  DESTINATION ${INSTALL_DIR})
