AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}
  SRCS)

ADD_EXECUTABLE(${TARGET_TIZEN_APP_MANAGER_CLI}
  ${SRCS})

SET_TARGET_PROPERTIES(
  ${TARGET_TIZEN_APP_MANAGER_CLI}
  PROPERTIES COMPILE_FLAGS "-fPIE")
SET_TARGET_PROPERTIES(
  ${TARGET_TIZEN_APP_MANAGER_CLI}
  PROPERTIES LINK_FLAGS "-pie")

APPLY_PKG_CONFIG(
  ${TARGET_TIZEN_APP_MANAGER_CLI} PUBLIC
  CAPI_APPFW_APP_MANAGER_DEPS
  CAPI_APPFW_APP_CONTROL_DEPS
  CAPI_APPFW_PACKAGE_MANAGER_DEPS
  RUA_DEPS
  GLIB_DEPS
  DLOG_DEPS
)

SET(INSTALL_DIR
  "${APP_DATA_DIR}/tools/cli/${TARGET_TIZEN_APP_MANAGER_CLI}")

INSTALL(TARGETS ${TARGET_TIZEN_APP_MANAGER_CLI}
  DESTINATION ${INSTALL_DIR})
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tool.md"
  DESTINATION ${INSTALL_DIR})
